fix: add build eeasytech-sv823 and himix200 script

--- a/4.8.7/linux-arm-eeasytech-sv823-g++/qmake.conf
+++ b/4.8.7/linux-arm-eeasytech-sv823-g++/qmake.conf
@@ -7,7 +7,7 @@ include(../../common/gcc-base-unix.conf)
 include(../../common/g++-unix.conf)
 include(../../common/qws.conf)
 
-CROSS_GCC_PTH       = /opt/toolchains/hisi-linux/arm-himix200-linux/bin/arm-himix200-linux-
+CROSS_GCC_PTH           = /mnt/data/toolchain/eeasytech/SV823/gcc-linaro-7.5.0-2019.12-x86_64_arm-linux-gnueabihf/bin/arm-linux-gnueabihf-
 
 # modifications to g++.conf
 QMAKE_CC                = ccache $${CROSS_GCC_PTH}gcc
